# ai-powered-catalog-search

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/catalog/: attribute_models.py  documents.py  elastic_components.py  models.py  serializers.py  urls.py  views.py
backend/catalog/migrations/: 0001_initial.py
backend/core/: settings.py  urls.py
backend/shared/: abstract_models.py
elasticsearch/config/analysis/: synonyms.txt
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: App.svelte  app.css
