[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-elasticsearch-dsl-drf-alt>=0.22.9",
    "django-environ>=0.12.0",
    "django-filter>=25.2",
    "django-treebeard>=4.7.1",
    "djangorestframework>=3.16.1",
    "elasticsearch==8.18.0",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
]
